# ChangeLog for media-video/linuxdvb
# Copyright 2003 Martin Hierling; Distributed under the GPL
# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/gentoo-deutsch/Repository/ebuilds/media-tv/linuxtv-dvb/ChangeLog,v 1.6 2003/10/28 22:10:51 martini Exp $

*linuxtv-dvb-1.0.1 (28 Oct 2003)
  01 Oct 2003; Martin Mittelsdorf <martini@vdr-portal.de>
  added patch for supporting remote-plugin as normal user

*linuxtv-dvb-1.0.1 (01 Oct 2003)
  01 Oct 2003; Martin Mittelsdorf <martini@vdr-portal.de>
  new dvb driver version 1.0.1

*linuxtv-dvb-1.0.0-r20030905 (21 Sep 2003)
  21 Sep 2003; Martin Hierling <mad@cc.fh-lippe.de>
  new dvb head version, removed splash due to lack of patch

*linuxtv-dvb-1.0.0 (07 Aug 2003)
  07 Aug 2003; Martin Hierling <mad@cc.fh-lippe.de>
  release 1.0.0

*linuxtv-dvb-1.0.0_pre3-r20030801 (04 Aug 2003)
  04 Aug 2003; Martin Hierling <mad@cc.fh-lippe.de>
  added stillimage prog and gentoo.mpg as splash screen
  for vdr

  04 Aug 2003; Martin Hierling <mad@cc.fh-lippe.de>
  moved from media-video to media-tv

  04 Aug 2003; Martin Hierling <mad@cc.fh-lippe.de>
  new cvs vsersion

*linuxtv-dvb-1.0.0_pre3-r20030608 (10 Jun 2003)
  04 Aug 2003; Martin Hierling <mad@cc.fh-lippe.de>
  moved from media-video to media-tv

  11 Jul 2003; Martin Hierling <mad@cc.fh-lippe.de>
  added a devfsd reload afer install

  10 Jun 2003; Martin Hierling <mad@cc.fh-lippe.de>
  new cvs head version

*linuxtv-dvb-1.0.0_pre3 (04 Jun 2003)
  04 Aug 2003; Martin Hierling <mad@cc.fh-lippe.de>
  moved from media-video to media-tv

  04 Jun 2003; Martin Hierling <mad@cc.fh-lippe.de>
  new version, noting else

*linuxtv-dvb-1.0.0_pre2-r20030524 (02 Jun 2003)
  04 Aug 2003; Martin Hierling <mad@cc.fh-lippe.de>
  moved from media-video to media-tv

  02 Jun 2003; Martin Hierling <mad@cc.fh-lippe.de>
  initial ebuild, some parts are from Martin Holzers/Thomas Raschbachers 
  ebuild, some parts has grown at gentoo.de cvs over the last months.