@@ -1,6 +1,9 @@
 # ChangeLog for media-video/linuxdvb
 # Copyright 2003 Martin Hierling; Distributed under the GPL
-# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/gentoo-deutsch/Repository/ebuilds/media-tv/linuxtv-dvb/ChangeLog,v 1.6 2003/10/28 22:10:51 martini Exp $
+# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/gentoo-deutsch/Repository/ebuilds/media-tv/linuxtv-dvb/ChangeLog,v 1.7 2003/12/10 13:56:39 rootshell Exp $
+*linuxtv-dvb-1.0.1 (10 Dec 2003)
+  10 Dec 2003; Florian Schilhabel <fernsehleo@gmx.net>
+  Version Bump to r20031108
 
 *linuxtv-dvb-1.0.1 (28 Oct 2003)
   01 Oct 2003; Martin Mittelsdorf <martini@vdr-portal.de>
